Bug 1416291 - Don't do partial display list building within preserve-3d contexts. r=miko a=gchang